# ng_portfolio

./: .gitignore  README.md  package.json  turbo.json
.github/workflows/: deploy.yml
apps/Client/: Dockerfile  angular.json  fly.toml  package.json  tailwind.config.js  tsconfig.json
apps/Client/src/: index.html
apps/Client/src/app/: app.config.ts  app.html  app.routes.server.ts  app.routes.ts  app.ts
apps/Client/src/common/types/: api.ts  dom.ts  general.ts  nav.ts  projects.ts  storage.ts  user.ts
apps/Client/src/core/api/: index.ts
apps/Client/src/core/constants/: breakpoints.ts
apps/Client/src/core/directives/: use_form_app.ts  use_form_field_dir.ts  use_form_field_img.ts
apps/Client/src/core/hooks/: use_api_tracker.ts  use_inj_ctx.ts
apps/Client/src/core/lib/: errApp.ts  log.ts  timer.ts
apps/Client/src/core/services/: use_conf_api.ts  use_kit_api.ts  use_kit_slice.ts  use_meta_event.ts  use_nav.ts  use_platform.ts  use_scroll.ts  use_storage.ts
apps/Client/src/core/store/: index.ts
apps/Client/src/environments/: environment.ts
apps/Client/src/features/notice/: slice.ts
apps/Client/src/features/projects/: slice.ts
apps/Client/src/features/toast/: slice.ts
apps/Client/src/layout/bg_black/: bg-black.html  bg-black.scss  bg-black.ts
apps/Client/src/styles/: index.scss
apps/Client/svg_ng_cli/: .gitignore  pyproject.toml
apps/Client/svg_ng_cli/src/svg_ng_cli/: __main__.py
apps/Client/svg_ng_cli/src/svg_ng_cli/lib/: err_mng.py  name_parse.py  setup_parser.py  svg_type.py  templates.py
cheatsheets/: fonts.md
(+244 files in other folders)
